# Cory

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CompileShaders.bat  CoryBase.drawio  HelloTriangle.cpp  HelloTriangle.h  Performance.md  README.md  Readme.md  Untitled Diagram.drawio  Utils.cpp  Utils.h  conanfile.txt  glfw_test.cpp  main.cpp  vk_builders.ipynb
Cory/: CMakeLists.txt  Cory.natvis  test_main.cpp
Cory/include/: Application.h  Buffer.h  Context.h  Image.h  Mesh.h  Utils.h  VkUtils.h
Cory/include/Cory/: Application.h  Buffer.h  Camera.h  CameraManipulator.h  Context.h  Core.h  Cory.hpp  Descriptor.h  FrameGraph.h  ImGuiLayer.h  Image.h  Log.h  Mesh.h  Profiling.h  Shader.h  Utils.h  VkBuilders.h  VkUtils.h  types.h
Cory/include/Cory/Application/: Application.hpp  ApplicationLayer.hpp  CameraManipulator.hpp  Common.hpp  DepthDebugLayer.hpp  DynamicGeometry.hpp  Event.hpp  ImGuiLayer.hpp  LayerStack.hpp  Window.hpp
Cory/include/Cory/Base/: BitField.hpp  Callback.hpp  Common.hpp  CpuBuffer.hpp  FmtUtils.hpp  Log.hpp  Math.hpp  Profiling.hpp  SlotMap.hpp  SlotMapHandle.hpp  Utils.hpp
Cory/include/Cory/Core/: APIConversion.hpp  BitField.hpp  Common.hpp  Context.hpp  FmtUtils.hpp  Math.h  ResourceLocator.hpp  (+4 more)
Cory/src/: Application.cpp  Buffer.cpp  Camera.cpp  CameraManipulator.cpp  Context.cpp  Cory.cpp  Descriptor.cpp  FrameGraph.cpp  ImGuiLayer.cpp  Image.cpp  Log.cpp  Mesh.cpp  Profiling.cpp  Shader.cpp  Utils.cpp  VkBuilders.cpp  VkUtils.cpp  graphics_context.cpp
Cory/src/Application/: Application.cpp  DepthDebugLayer.cpp  DynamicGeometry.cpp  ImGuiLayer.cpp  LayerStack.cpp  Window.cpp
Cory/src/Base/: Log.cpp  Profiling.cpp  ResourceLocator.cpp
Cory/src/Core/: Context.cpp  Log.cpp  ResourceLocator.cpp  Utils.cpp  VulkanUtils.cpp
Cory/src/Framegraph/: Builder.cpp  CommandList.cpp  Framegraph.cpp  FramegraphVisualizer.cpp  FramegraphVisualizer.h  TextureManager.cpp  TransientRenderPass.cpp
Cory/src/RenderCore/: Context.cpp  SingleShotCommandBuffer.cpp  VulkanUtils.cpp
Cory/src/Renderer/: Context.cpp  ResourceManager.cpp  Shader.cpp  SingleShotCommandBuffer.cpp  SwapChain.cpp  Swapchain.cpp  Synchronization.cpp  UniformBufferObject.cpp  VulkanSynchronization.cpp  VulkanUtils.cpp
Cory/src/UI/: Application.cpp  Fence.cpp  Shader.cpp  SwapChain.cpp  Window.cpp
Cory/src/utils/: executor.cpp
Cory/src/vk/: buffer.cpp  command_buffer.cpp  command_pool.cpp  device.cpp  fence.cpp  graphics_context.cpp  graphics_pipeline.cpp  image.cpp  image_view.cpp  instance.cpp  queue.cpp  render_pass.cpp  shader.cpp  swapchain.cpp  test_utils.cpp  utils.cpp
Cory/test/: BitField_Test.cpp  CMakeLists.txt  Callback_Test.cpp  CoroutinePlayground.cpp  Cory_Test.cpp  DescriptorSetManager_Test.cpp  FmtUtils_Test.cpp  FrameGraph_Test.cpp  LayerStack_test.cpp  RenderTaskDeclaration_Test.cpp  ResourceManager_Test.cpp  SlotMap_Test.cpp  TestUtils.cpp  TestUtils.hpp  Time_Test.cpp  Utils_Test.cpp  catch_main.cpp
CoryAPITest/: CMakeLists.txt
CoryAPITest/src/: main.cpp
CoryVkGen/: CMakeLists.txt  __main__.py  prototyping.ipynb  requirements.txt  test.py  vk_builders.ipynb
CoryVkGen/cvk/: CMakeLists.txt
CoryVkGen/cvk/src/: context.cpp  device.cpp  device_builder.cpp  fence.cpp  image.cpp  image_builder.cpp  image_view.cpp  image_view_builder.cpp  instance.cpp  instance_builder.cpp  log.cpp  queue.cpp  swapchain.cpp  swapchain_builder.cpp  test_main.cpp  test_utils.cpp  utils.cpp
CoryVkGen/cvk/test/: executor.cpp  instance.cpp  queue.cpp  test_main.cpp  test_utils.cpp  test_utils.h
CoryVkGen/cvkg/: BuilderGenerator.py  EnumFmtGenerator.py  Generator.py  GeneratorBase.py  GeneratorUtils.py  SpecParser.py  StructFmtGenerator.py  Types.py  __init__.py  flextglutils.py
CoryVkGen/cvkg/templates/: CreateInfo.tpl.h
CoryVkGen/templates/: Builder.tpl.h  CreateInfo.tpl  CreateInfos.tpl.h  FmtEnum.tpl.h  FmtStruct.tpl.h  Member.tpl
HelloTriangle/: CMakeLists.txt
HelloTriangle/include/: HelloTriangle.h
HelloTriangle/shaders/: compile.bat  simple_shader.frag  simple_shader.vert
HelloTriangle/src/: DeviceWrapper.hpp  HelloTriangle.cpp  HelloTriangleApplication.cpp  HelloTriangleApplication.hpp  TrianglePipeline.cpp  TrianglePipeline.hpp  main.cpp
UdemyCourse/: 00_CompatibilityTest.cpp  CMakeLists.txt  UdemyVulkanCourse.cpp  VulkanRenderer.cpp  VulkanRenderer.h
examples/03-SceneGraph/: CMakeLists.txt
examples/03-SceneGraph/shaders/: cube.frag  cube.vert
examples/03-SceneGraph/src/: Common.hpp  CubeAnimationSystem.cpp  CubeAnimationSystem.hpp  CubeRenderSystem.cpp  CubeRenderSystem.hpp  SceneGraphDemo.cpp  SceneGraphDemo.hpp  main.cpp
src/Cory/: CMakeLists.txt  Cory.cpp
src/Cory/Application/: Application.cpp  ApplicationLayer.hpp  CameraManipulator.cpp  Common.hpp  DepthDebugLayer.cpp  DepthDebugLayer.hpp  DynamicGeometry.cpp  Event.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  LayerStack.cpp  LayerStack.hpp  Window.cpp  Window.hpp
src/Cory/Base/: Callback.hpp  Common.hpp  Concepts.hpp  FmtUtils.hpp  FutureFrameQueue.hpp  Log.cpp  Math.hpp  Profiling.cpp  Random.hpp  ResourceLocator.cpp  ResourceLocator.hpp  SimulationClock.cpp  SimulationClock.hpp  Time.cpp  Time.hpp  Utils.cpp  Utils.hpp
src/Cory/Framegraph/: Builder.cpp  CommandList.cpp  Common.hpp  Framegraph.cpp  Framegraph.hpp  FramegraphVisualizer.cpp  FramegraphVisualizer.h  RenderTaskBuilder.hpp  RenderTaskDeclaration.hpp  TextureManager.cpp  TextureManager.hpp  TransientRenderPass.cpp
src/Cory/ImGui/: Inputs.hpp  Widgets.cpp  Widgets.hpp
src/Cory/Renderer/: APIConversion.hpp  Common.cpp  Context.cpp  Context.hpp  DescriptorSets.cpp  DescriptorSets.hpp  ResourceManager.cpp  ResourceManager.hpp  Semaphore.hpp  Shader.cpp  Shader.hpp  SingleShotCommandBuffer.cpp  Swapchain.cpp  Synchronization.cpp  Synchronization.hpp  UniformBufferObject.cpp  VulkanUtils.cpp  VulkanUtils.hpp
src/Cory/SceneGraph/: Common.hpp  SceneGraph.cpp  SceneGraph.hpp  System.cpp  System.hpp
src/Cory/Systems/: CommonComponents.hpp  SystemCoordinator.cpp  SystemCoordinator.hpp  TransformSystem.cpp  TransformSystem.hpp
(+164 files in other folders)
